fix(popup): margin on mobile

--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -16,6 +16,7 @@
 
 @media (max-width: 619px) {
   .popup__save-button {
+    margin-top: 16px;
     height: 46px;
     font-size: 14px;
     line-height: 17px;
